--- a/app/views/videos.xml
+++ b/app/views/videos.xml
@@ -1,5 +1,6 @@
 <Alloy>
-	<Window backgroundColor="white">
-		 <Label>Details of the training videos</Label>
-    </Window>
+	<Window title="Videos">
+		<TableView id="videosTable" onClick="showVideo">
+		</TableView>
+	</Window>
 </Alloy>
