--- a/app/views/assignmentDetail.xml
+++ b/app/views/assignmentDetail.xml
@@ -2,23 +2,31 @@
 	<TabGroup id="assignmentTab">
 		<Tab id="assessmentTab" title="Assessment" icon="assessment_tab.png">
 			<Window id="assessmentWin" backgroundColor="white">
+				<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
     		</Window>
 		</Tab>
 		<Tab id="nextTrainingTab" title="Next Training" icon="training_tab.png" >
 			<Window title="Training" backgroundColor="white">
-				<TableView id="trainingTable">
+				<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<TableView id="trainingTable" visible="false">
         		</TableView>
 			</Window>
 		</Tab>
 		<Tab id="drillsTab" title="Drills" icon="drills_tab.png">
 			<Window title="Drills" backgroundColor="white">
-				<TableView id="drillsTable">
+				<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<TableView id="drillsTable" visible="false">
         		</TableView>
 			</Window>
 		</Tab>
-		<Tab id="videosTab" title="Videos" icon="video_Tab.png">
+		<Tab id="videosTab" title="Videos" icon="video_tab.png">
 			<Window title="Videos" backgroundColor="white">
-				<TableView id="videoCategoriesTable">
+				<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+				<TableView id="videoCategoriesTable" visible="false">
         		</TableView>
 			</Window>
 		</Tab>
