--- a/app/views/drillBrowse.xml
+++ b/app/views/drillBrowse.xml
@@ -1,6 +1,8 @@
 <Alloy>
 	<Window backgroundColor="white">
-		<TableView id="drillBrowseTable">
+		<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+		<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+		<TableView id="drillBrowseTable" visible="false">
         </TableView>
 	</Window>
 </Alloy>
