--- a/app/views/focus.xml
+++ b/app/views/focus.xml
@@ -1,5 +1,6 @@
 <Alloy>
 	<Window id="focusWin" backgroundColor="white">
-		
+		<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+		<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>	
     </Window>
 </Alloy>
