--- a/app/views/videos.xml
+++ b/app/views/videos.xml
@@ -1,6 +1,8 @@
 <Alloy>
-	<Window title="Videos">
-		<TableView id="videosTable" onClick="showVideo">
+	<Window title="Videos" backgroundColor="white">
+		<ActivityIndicator platform="android" id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+		<ActivityIndicator platform="ios" id="activityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+		<TableView id="videosTable" onClick="showVideo" visible="false">
 		</TableView>
 	</Window>
 </Alloy>
