--- a/app/views/assignments.xml
+++ b/app/views/assignments.xml
@@ -1,7 +1,7 @@
 <Alloy>
 	<Window id="navAssignment" title="Home" platform="android" backgroundColor="white">
   		<TableView id="trainingTable" onClick="goAssignment" visible="false"></TableView>
-  		<ActivityIndicator id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160" left="100"></ActivityIndicator>
+  		<ActivityIndicator id="activityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
   	</Window>
   	<NavigationWindow id="navAssignment" platform="ios">
   		<Window title="Home" backgroundColor="white">
