--- a/app/views/assignmentDetail.xml
+++ b/app/views/assignmentDetail.xml
@@ -14,6 +14,14 @@
         		</TableView>
 			</Window>
 		</Tab>
+		<Tab id="gameDayTab" title="Game Day" icon="training_tab.png" >
+			<Window id="gameDayWin" title="Game Day" backgroundColor="white">
+				<ActivityIndicator platform="android" id="gactivityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
+				<ActivityIndicator platform="ios" id="gactivityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
+				<TableView id="gameDayTable" visible="false">
+        		</TableView>
+			</Window>
+		</Tab>
 		<Tab id="drillsTab" title="Drills" icon="drills_tab.png">
 			<Window title="Drills" backgroundColor="white">
 				<ActivityIndicator platform="android" id="dactivityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
