--- a/app/views/assignmentDetail.xml
+++ b/app/views/assignmentDetail.xml
@@ -14,7 +14,7 @@
         		</TableView>
 			</Window>
 		</Tab>
-		<Tab id="gameDayTab" title="Game Day" icon="training_tab.png" >
+		<Tab id="gameDayTab" title="Game Day" icon="gameday_tab.png" >
 			<Window id="gameDayWin" title="Game Day" backgroundColor="white">
 				<ActivityIndicator platform="android" id="gactivityIndicator" style="Ti.UI.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
 				<ActivityIndicator platform="ios" id="gactivityIndicator" style="Ti.UI.iPhone.ActivityIndicatorStyle.DARK" message='Loading...' top="160"></ActivityIndicator>
