--- a/app/views/signUp.xml
+++ b/app/views/signUp.xml
@@ -1,8 +1,8 @@
 <Alloy>
-	<Window backgroundColor="black">
-		<TextField id="firstName" hintText="First Name" borderStyle="Ti.UI.INPUT_BORDERSTYLE_ROUNDED" color="black" backgroundColor="white" passwordMask="true" keyboardToolbarColor="#999" keyboardToolbarHeight="40"
+	<Window id="signUpWindow" backgroundColor="black">
+		<TextField id="firstName" hintText="First Name" borderStyle="Ti.UI.INPUT_BORDERSTYLE_ROUNDED" color="black" backgroundColor="white" keyboardToolbarColor="#999" keyboardToolbarHeight="40"
             top="40" height="35" width="200"/>   
-        <TextField id="lastName" hintText="Last Name" borderStyle="Ti.UI.INPUT_BORDERSTYLE_ROUNDED" color="black" backgroundColor="white" passwordMask="true" keyboardToolbarColor="#999" keyboardToolbarHeight="40"
+        <TextField id="lastName" hintText="Last Name" borderStyle="Ti.UI.INPUT_BORDERSTYLE_ROUNDED" color="black" backgroundColor="white" keyboardToolbarColor="#999" keyboardToolbarHeight="40"
             top="80" height="35" width="200"/>  
 		<TextField id="email" hintText="Email" borderStyle="Ti.UI.INPUT_BORDERSTYLE_ROUNDED" color="black" backgroundColor="white" keyboardToolbarColor="#999" keyboardToolbarHeight="40"
             top="120" height="35" width="200"/>
@@ -14,5 +14,7 @@
         <Switch top="250" left="150" id="coachSwitch" value="false" onChange="doCoachCheck"/>
         <Picker top="300" width="Titanium.UI.FILL" id="activityPicker" onChange="getGrades"></Picker>  
         <Picker top="350" width="Titanium.UI.FILL" id="gradesPicker"></Picker>  
+        <Button id="newUserBtn" top="400" color="white" onClick="doJoinNow">Join Now</Button>
+        <Button id="newUserBtn" top="450" color="white" onClick="doCancel">Cancel</Button>
 	</Window>
 </Alloy>
